# Project-Trellis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TrellisPhase2.md  alembic.ini  docker-compose.yml  logsfromdocker.txt  pyproject.toml  trellis-architecture_1.docx
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_interest_groups.py  003_add_story_tags.py  004_expand_relationship_tags.py
app/: main.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  redis.py  security.py  templates.py
app/models/: __init__.py
app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/garden/: categories.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/journal/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/notifications/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/prompts/: cache.py  context.py  engine.py  schemas.py
app/modules/ui/: router.py
app/storage/: s3.py
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/dashboard/: index.html
app/templates/garden/: import_json.html  index.html  plot_detail.html  plot_form.html  timeline.html
app/templates/journal/: entry_detail.html  entry_form.html  index.html
app/templates/notifications/: index.html
app/templates/partials/: curiosity_form.html  (+14 more)
app/workers/: celery_app.py
static/css/: tailwind.css
static/js/: app.js
tests/: conftest.py  test_auth.py  test_garden.py
(+2 files in other folders)
